fixing spacing in projects section

--- a/styles/sass/partials/portfolioStyles/_projects.scss
+++ b/styles/sass/partials/portfolioStyles/_projects.scss
@@ -7,12 +7,8 @@
 .portfolioUl {
     display: flex;
     justify-content: space-between;
-    gap: 15px;
-        li {
-            width: calc((100% / 3) - 30px);
-            display: flex;
-            justify-content: center;
-        }
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .projectContainer {
@@ -55,35 +51,4 @@
 
 .projectContainer:hover .projectTextOverlay {
     opacity: 1;
-}
-
-// Lightbox styles
-#lightbox {
-    position: fixed;
-    z-index: 30;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .8);
-    display: none;
-}
-
-#lightbox.active {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-#lightbox img {
-    max-width: 100%;
-    height: auto;
-    border: 5px solid #757BC8;
-}
-
-.lightboxText {
-    display: none;
-}
-
-.lightboxText.active {
-    display: flex;
 }
