--- a/styles/style.css
+++ b/styles/style.css
@@ -570,16 +570,9 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 15px;
-}
-.portfolioUl li {
-  width: calc(33.3333333333% - 30px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
 }
 
 .projectContainer {
@@ -641,43 +634,6 @@ nav {
 
 .projectContainer:hover .projectTextOverlay {
   opacity: 1;
-}
-
-#lightbox {
-  position: fixed;
-  z-index: 30;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: none;
-}
-
-#lightbox.active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#lightbox img {
-  max-width: 100%;
-  height: auto;
-  border: 5px solid #757BC8;
-}
-
-.lightboxText {
-  display: none;
-}
-
-.lightboxText.active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .contact {
